fix column width after wrapping on small screens

--- a/_css/mal.css
+++ b/_css/mal.css
@@ -41,9 +41,13 @@ figure { margin: 0; }
 @media (max-width: 480px) { #space { display: unset; } }
 
 @media (max-width: 940px) {
-  .franklin-content div.outer  { width: 100% !important; }
-  .franklin-content div.column { clear: both; float: left; text-align: left; }
-  .franklin-content .pad-left  { margin-left: 2rem; }
+  .franklin-content div.outer { clear: both; float: left; text-align: left; }
+  .franklin-content div.full  { width: 100% !important; }
+}
+
+@media (max-width: 760px) {
+  .franklin-content div.inner { clear: both; float: left; text-align: left; }
+  .franklin-content .pad-left { margin-left: 2rem; }
 }
 
 /* ==================================================================
